[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/botao_verde1.png" type="BitMap" id=3]
[ext_resource path="res://Sprites/botao_verde_normal.png" type="Texture" id=4]
[ext_resource path="res://Assets2/IconsUI/seta_left_verde.png" type="Texture" id=5]
[ext_resource path="res://Sprites/botao_verde2.png" type="Texture" id=6]
[ext_resource path="res://Assets2/IconsUI/seta_left_verde_sombra.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MapaFloresta.png" type="Texture" id=8]
[ext_resource path="res://Sprites/MapaSertao.png" type="Texture" id=9]
[ext_resource path="res://Assets2/IconsUI/contorno.png" type="Texture" id=10]
[ext_resource path="res://Cenas/Scripts/Mapas.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 362 )
scale = Vector2( 6.64583, 6.62963 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 352, 344 )
scale = Vector2( 22.65, 20 )
texture = ExtResource( 10 )

[node name="BotaoMapa1" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 368.0
margin_right = 746.0
margin_bottom = 743.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 3 )

[node name="Mapa1" type="Label" parent="."]
margin_left = 168.0
margin_top = 507.0
margin_right = 291.0
margin_bottom = 523.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Floresta"
align = 1

[node name="MapaFloresta" type="Sprite" parent="."]
position = Vector2( 352, 314.675 )
scale = Vector2( 0.417801, 0.430952 )
texture = ExtResource( 8 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 950, 344 )
scale = Vector2( 22.65, 20 )
texture = ExtResource( 10 )

[node name="BotaoMapa2" type="TextureButton" parent="."]
margin_left = 678.0
margin_top = 360.0
margin_right = 1344.0
margin_bottom = 735.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 3 )

[node name="Mapa2" type="Label" parent="."]
margin_left = 780.0
margin_top = 494.0
margin_right = 890.0
margin_bottom = 510.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Velho Oeste"
align = 1

[node name="MapaSertao" type="Sprite" parent="."]
position = Vector2( 950, 312 )
scale = Vector2( 0.45, 0.372093 )
texture = ExtResource( 9 )

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_left = 32.0
margin_top = 608.0
margin_right = 64.0
margin_bottom = 640.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[connection signal="pressed" from="BotaoMapa1" to="." method="_on_BotaoMapa1_pressed"]
[connection signal="pressed" from="BotaoMapa2" to="." method="_on_BotaoMapa2_pressed"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
